# defrag

./: .clang-format  .gitignore  .gitmodules  Makefile.bkp.qvmOnly  Makefile.osdf  Makefile.qvm  build.zig  build.zig.zon  cg_strafehud.h  changelog  compiledFiles.txt  info.zig  invalid.txt  readme.md  run.sh
assets/: readme.md
cgame/: cg_consolecmds.c  cg_cvar.c  cg_draw.c  cg_event.c  cg_local.h  cg_main.c  cg_playerstate.c  cg_predict.c  cg_servercmds.c  cg_utils.c  cg_weapons.c
cgame/hud/: accel.c  core.c  (+3 more)
client/: keycodes.h
dep/: Makefile  Makefile.ioq3  Makefile.osdf  compiledFiles.txt
doc/: build.md  code-references.md  conduct.md  contribute.md  git.md  structure.md  style.gpl.md  style.md
qcommon/: q_assert.h  q_math.c  q_shared.h
sgame/: ai_dmnet.c  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_team.c  ai_vcmd.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_pmove.h  bg_public.h  bg_slidemove.c  g_active.c  g_arenas.c  g_client.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_missile.c  g_mover.c  g_session.c  g_spawn.c  g_target.c  g_weapon.c  inv.h
src/: build.nim  hello.c  readme.md
src/game/cgame/hud/wip/: CMakeLists.txt  ExportImport.h  bbox.c  bbox.h  bg_pmove.h  bg_public.h  cg_ammo.h  cg_consolecmds.c  cg_draw.h  cg_entity.h  cg_gl.c  cg_gl.h  cg_jump.c  cg_local.h  cg_main.h  cg_marks.c  cg_snap.c  cg_snap.h  cg_syscall.c  cg_timer.c  cg_timer.h  g_local.h  g_missile.c  g_public.h  g_weapon.c  q_math.h
ui/: callbacks.h  local.h  shared.h  todo.md  types.h  ui_startserver.c
ui_q3/: ui_local.h  ui_main.c  ui_qmenu.c  ui_syscalls.c
(+358 files in other folders)
